--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/shweta-priya-toppo/" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/Shweta-PT/Demo" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/Shweta-PT?tab=projects" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					
 					</nav>
@@ -123,6 +123,10 @@
 									Berlin - 12167, Germany</p> 
 							</section>
 							<section>
+								<h3>Phone</h3>
+								<p>(+49) 176 6598 5152</p>
+							</section>
+							<section>
 								<h3>Email</h3>
 								<p>shwetapt@gmail.com</p>
 							</section>
@@ -131,7 +135,7 @@
 								<ul class="icons alt">
 									
 									<li><a href="https://www.linkedin.com/in/shweta-priya-toppo/" class="icon brands alt fa-linkedin"><span class="label">Instagram</span></a></li>
-									<li><a href="https://github.com/Shweta-PT/Demo" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/Shweta-PT?tab=projects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
